Refactor the whole code base
